using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Constants
{
    public static class Colors
    {
        public const string CursorMarkerColor = "#00D0FF4B";
        public const string CursorMarkerDeleteColor = "#FF0500FF";
        public const string CursorMarkerGatherTreesColor = "#00FF6CFF";
        public const string CursorMarkerGatherStoneColor = "#7B7B7BFF";

        public const string ResourceUIBackgroundColor = "#B1D8FFE1";
        public const string ResourceUITextColor = "#1D1D1DFF";
        public const string ResourceUIBackgroundGainColor = "#45B748E1";
        public const string ResourceUIBackgroundLossColor = "#CA6353E1";
    }

    public static class AnimationStrings
    {
        public const string MOVING = "Moving";
        public const string IDLING = "Idling";
        public const string HARVESTING_RESOURCE = "HarvestingResource";

    }
}